--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <div class="sm">
 
-      <a href="http://steamcommunity.com/profiles/76561198836716926" class="fab fa-steam"></a>
+      <a href="http://steamcommunity.com/profiles/76561198836716926" class="fab fa-stea"></a>
         
       <a href="https://www.twitch.tv/sparkiizera" class="fab fa-twitch"></a>
 
