--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <html lang="en">
 
+
+
 <head>
 
   <meta charset="UTF-8">
@@ -10,10 +12,56 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="ind.jpg">
+
+  
       
 </head>
 <body>
 
+
+<!--          WORKING ONLY IN MICROSOFT EXPLORE
+
+<audio id="audioID" controls="" style="width: 0%;">
+<source src="./music.mp3" type="audio/mpeg">
+
+Please update your browser does not support the audio element.
+
+</audio>
+
+<script type="text/javascript">
+  function autoplay(){
+      var r =confirm("Would You Like To AutoPlay Music?");
+      if (r == true) {
+          document.getElementById("audioID").play();
+      }
+    }
+  </script>
+
+  <script>
+  autoplay();
+  </script> 
+
+ --> 
+
+<!--
+
+                  WORKING ONLY IN MICROSOFT EXPLORE 
+
+
+    <audio id="myaudio" autoplay="true" src="music.mp3">
+    Update your browser. Your browser does not support HTML audio
+	</audio> 
+
+  <script>
+    var audio = document.getElementById("myaudio");
+    audio.volume = 0.01;
+  </script>
+-->
+
+
+
+
+  
   <div class="profile-card">
 
   <div class="card-header">
@@ -35,8 +83,9 @@
 
       <a href="https://www.youtube.com/channel/UCT7hL7bxQhUpnYLhYqUOUDA" class="fab fa-youtube"></a>
 
-
+      
   </div>
+
 
 </body>
 </html>
