New Files Added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 
-<!--          WORKING ONLY IN MICROSOFT EXPLORE
+       WORKING ONLY IN MICROSOFT EXPLORE
 
 <audio id="audioID" controls="" style="width: 0%;">
 <source src="./music.mp3" type="audio/mpeg">
@@ -41,7 +41,7 @@ Please update your browser does not support the audio element.
   autoplay();
   </script> 
 
- --> 
+
 
 <!--
 
