--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 
-       WORKING ONLY IN MICROSOFT EXPLORE
+<!--       WORKING ONLY IN MICROSOFT EXPLORE
 
 <audio id="audioID" controls="" style="width: 0%;">
 <source src="./music.mp3" type="audio/mpeg">
@@ -41,11 +41,10 @@ Please update your browser does not support the audio element.
   autoplay();
   </script> 
 
+-->
 
 
-<!--
 
-                  WORKING ONLY IN MICROSOFT EXPLORE 
 
 
     <audio id="myaudio" autoplay="true" src="music.mp3">
@@ -56,7 +55,7 @@ Please update your browser does not support the audio element.
     var audio = document.getElementById("myaudio");
     audio.volume = 0.01;
   </script>
--->
+
 
 
 
